카테고리 페이지 UI

--- a/MarketCurlyB/MarketCurlyB/categoryTableViewCell.xib
+++ b/MarketCurlyB/MarketCurlyB/categoryTableViewCell.xib
@@ -16,40 +16,34 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xRa-lh-eOz">
-                        <rect key="frame" x="20" y="5" width="34" height="34"/>
-                        <color key="backgroundColor" red="1" green="0.65433932299999997" blue="0.29889649299999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="xRa-lh-eOz" secondAttribute="height" multiplier="1:1" id="vXQ-dA-0TH"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pV9-b3-bVo">
-                        <rect key="frame" x="74" y="11.5" width="206" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Pl-NF-yQL">
+                        <rect key="frame" x="72" y="11.5" width="228" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tbw-bc-RE9">
+                        <rect key="frame" x="20" y="6" width="32" height="32"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="Tbw-bc-RE9" secondAttribute="height" multiplier="1:1" id="cKs-7z-U4t"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="pV9-b3-bVo" secondAttribute="trailing" constant="40" id="1T5-4V-VSg"/>
-                    <constraint firstItem="pV9-b3-bVo" firstAttribute="leading" secondItem="xRa-lh-eOz" secondAttribute="trailing" constant="20" id="6KM-ol-HtN"/>
-                    <constraint firstItem="xRa-lh-eOz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="IEp-Xd-MBU"/>
-                    <constraint firstItem="xRa-lh-eOz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="Kbo-na-KDZ"/>
-                    <constraint firstAttribute="bottom" secondItem="xRa-lh-eOz" secondAttribute="bottom" constant="5" id="NPS-D9-zX1"/>
-                    <constraint firstItem="pV9-b3-bVo" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="x8S-aJ-JM7"/>
+                    <constraint firstItem="Tbw-bc-RE9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="H3s-uP-21S"/>
+                    <constraint firstItem="7Pl-NF-yQL" firstAttribute="leading" secondItem="Tbw-bc-RE9" secondAttribute="trailing" constant="20" id="Kux-e5-BXr"/>
+                    <constraint firstAttribute="trailing" secondItem="7Pl-NF-yQL" secondAttribute="trailing" constant="20" id="NOc-nD-JXn"/>
+                    <constraint firstItem="7Pl-NF-yQL" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Tfl-B7-85c"/>
+                    <constraint firstAttribute="bottom" secondItem="Tbw-bc-RE9" secondAttribute="bottom" constant="6" id="gHx-hK-thI"/>
+                    <constraint firstItem="Tbw-bc-RE9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="m9h-iS-Sfh"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="categoryNameLabel" destination="pV9-b3-bVo" id="jMM-sS-ASC"/>
-                <outlet property="categotyImageView" destination="xRa-lh-eOz" id="QLw-hc-QcX"/>
+                <outlet property="imgView" destination="Tbw-bc-RE9" id="aJQ-HV-P1P"/>
+                <outlet property="nameLabel" destination="7Pl-NF-yQL" id="fJ7-gT-H3M"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="114.50892857142857"/>
+            <point key="canvasLocation" x="137.68115942028987" y="69.642857142857139"/>
         </tableViewCell>
-        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="3az-dr-OVh">
-            <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <point key="canvasLocation" x="110" y="119"/>
-        </imageView>
     </objects>
 </document>
