--- a/MarketCurlyB/MarketCurlyB/Base.lproj/Main.storyboard
+++ b/MarketCurlyB/MarketCurlyB/Base.lproj/Main.storyboard
@@ -278,7 +278,7 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ii8-Yh-6hQ">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                                                         <subviews>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yNc-SM-1C9">
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="선물하기" translatesAutoresizingMaskIntoConstraints="NO" id="yNc-SM-1C9">
                                                                 <rect key="frame" x="20" y="5" width="40" height="40"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" secondItem="yNc-SM-1C9" secondAttribute="height" multiplier="1:1" id="L5c-zM-e6l"/>
@@ -313,21 +313,18 @@
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Kfe-nM-zEO">
                                                         <rect key="frame" x="0.0" y="870" width="414" height="1650"/>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="1650" id="Kd4-z6-XsB"/>
-                                                        </constraints>
                                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fFX-XB-GUQ">
-                                                            <size key="itemSize" width="170" height="178"/>
+                                                            <size key="itemSize" width="170" height="170"/>
                                                             <size key="headerReferenceSize" width="50" height="50"/>
                                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                            <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
                                                         </collectionViewFlowLayout>
                                                         <cells>
                                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GridCell" id="J3A-nc-B81" customClass="GridCell" customModule="MarketCurlyB" customModuleProvider="target">
-                                                                <rect key="frame" x="0.0" y="50" width="170" height="178"/>
+                                                                <rect key="frame" x="20" y="50" width="170" height="170"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="IgU-Ax-iR7">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="170" height="178"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="170" height="170"/>
                                                                     <autoresizingMask key="autoresizingMask"/>
                                                                     <subviews>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7Ot-eg-4kH">
@@ -428,6 +425,7 @@
                         <outlet property="leftBarBtn" destination="Tzn-fv-bmF" id="DCu-J8-vjH"/>
                         <outlet property="leftBarBtn2" destination="uSb-nl-8EI" id="wkm-6n-c6W"/>
                         <outlet property="naviItem" destination="CB2-9k-bCv" id="nAz-4W-NOn"/>
+                        <outlet property="tableView" destination="LmW-t8-kwD" id="F0u-es-YXf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bsk-kk-uaV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -594,6 +592,7 @@
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
+        <image name="선물하기" width="41" height="40"/>
         <namedColor name="KurlyColor">
             <color red="0.33899998664855957" green="0.043000001460313797" blue="0.48199999332427979" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
